--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-  "name": "fantastic-broccoli",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "preview": "vite preview",
-    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --plugin-search-dir . --check . && eslint .",
-    "format": "prettier --plugin-search-dir . --write ."
-  },
-  "devDependencies": {
-    "@sveltejs/adapter-auto": "^1.0.2",
-    "@sveltejs/kit": "^1.2.2",
-    "@sveltejs/vite-plugin-svelte": "^2.0.2",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
-    "autoprefixer": "^10.4.13",
-    "date-fns": "^2.29.3",
-    "eslint": "^8.32.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "postcss": "^8.4.21",
-    "prettier": "^2.8.3",
-    "prettier-plugin-svelte": "^2.9.0",
-    "prettier-plugin-tailwindcss": "^0.2.1",
-    "stylus": "^0.55.0",
-    "svelte": "^3.55.1",
-    "svelte-check": "^2.10.3",
-    "svelte-preprocess": "^5.0.1",
-    "tailwindcss": "^3.2.4",
-    "tslib": "^2.4.1",
-    "typescript": "^4.9.4",
-    "vite": "^4.0.4"
-  },
-  "type": "module",
-  "dependencies": {
-    "@types/uuid": "^9.0.0",
-    "svelte-markdown": "^0.2.3",
-    "uuid": "^9.0.0"
-  }
+    "name": "fantastic-broccoli",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "lint": "prettier --plugin-search-dir . --check . && eslint .",
+        "format": "prettier --plugin-search-dir . --write ."
+    },
+    "devDependencies": {
+        "@sveltejs/adapter-auto": "^1.0.2",
+        "@sveltejs/kit": "^1.2.2",
+        "@sveltejs/vite-plugin-svelte": "^2.0.2",
+        "@typescript-eslint/eslint-plugin": "^5.48.2",
+        "@typescript-eslint/parser": "^5.48.2",
+        "autoprefixer": "^10.4.13",
+        "date-fns": "^2.29.3",
+        "eslint": "^8.32.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-plugin-svelte3": "^4.0.0",
+        "postcss": "^8.4.21",
+        "prettier": "^2.8.3",
+        "prettier-plugin-svelte": "^2.9.0",
+        "prettier-plugin-tailwindcss": "^0.2.1",
+        "stylus": "^0.55.0",
+        "svelte": "^3.55.1",
+        "svelte-check": "^2.10.3",
+        "svelte-preprocess": "^5.0.1",
+        "tailwindcss": "^3.2.4",
+        "tslib": "^2.4.1",
+        "typescript": "^4.9.4",
+        "vite": "^4.0.4"
+    },
+    "type": "module",
+    "dependencies": {
+        "@supabase/supabase-js": "^2.4.1",
+        "@types/uuid": "^9.0.0",
+        "svelte-markdown": "^0.2.3",
+        "uuid": "^9.0.0"
+    }
 }
