--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --plugin-search-dir . --check . && eslint .",
-        "format": "prettier --plugin-search-dir . --write ."
+        "format": "prettier --plugin-search-dir . --write .",
+        "seedDb": "node ./seedDb.js"
     },
     "devDependencies": {
         "@sveltejs/adapter-auto": "^1.0.2",
@@ -19,6 +20,7 @@
         "@typescript-eslint/parser": "^5.48.2",
         "autoprefixer": "^10.4.13",
         "date-fns": "^2.29.3",
+        "dotenv": "^16.0.3",
         "eslint": "^8.32.0",
         "eslint-config-prettier": "^8.6.0",
         "eslint-plugin-svelte3": "^4.0.0",
