--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --plugin-search-dir . --check . && eslint .",
-        "format": "prettier --plugin-search-dir . --write .",
-        "seedDb": "node ./seedDb.js"
+        "format": "prettier --plugin-search-dir . --write ."
     },
     "devDependencies": {
-        "@sveltejs/adapter-auto": "^1.0.2",
         "@sveltejs/kit": "^1.2.2",
         "@sveltejs/vite-plugin-svelte": "^2.0.2",
         "@typescript-eslint/eslint-plugin": "^5.48.2",
