--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "type": "module",
     "dependencies": {
         "@supabase/supabase-js": "^2.4.1",
+        "@sveltejs/adapter-auto": "^1.0.2",
         "@types/uuid": "^9.0.0",
         "svelte-markdown": "^0.2.3",
         "uuid": "^9.0.0"
