--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
         "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
         "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
         "lint": "prettier --plugin-search-dir . --check . && eslint .",
-        "format": "prettier --plugin-search-dir . --write ."
+        "format": "prettier --plugin-search-dir . --write .",
+        "seedDb": "node ./seedDb.js"
     },
     "devDependencies": {
         "@sveltejs/adapter-auto": "^1.0.2",
-        "@sveltejs/kit": "^1.2.3",
+        "@sveltejs/kit": "^1.2.6",
         "@sveltejs/vite-plugin-svelte": "^2.0.2",
-        "@typescript-eslint/eslint-plugin": "^5.48.2",
-        "@typescript-eslint/parser": "^5.48.2",
+        "@typescript-eslint/eslint-plugin": "^5.49.0",
+        "@typescript-eslint/parser": "^5.49.0",
         "autoprefixer": "^10.4.13",
         "date-fns": "^2.29.3",
         "eslint": "^8.32.0",
